src/test/deca/context/invalid/declClass-sameFieldClassMethodSuper.context
declClass-sameFieldClassMethodSuper.deca:9: